--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,19 @@
     height: 250px;
     padding: 2px;
 }
+
+.content-title{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.title{
+   position: absolute;
+   top: 0;
+}
+
 .App h1{
     text-align: center;
 }
