--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,9 @@
    position: absolute;
    top: 0;
 }
-
+.App{
+    background-color: lightseagreen;
+}
 .App h1{
     text-align: center;
 }
@@ -49,4 +51,21 @@
     width: 100%;
     
     height: 40px;
+}
+.residentInfo > div{
+    display: flex;
+    flex-direction: row;
+    font-size: 15px;
+    padding: 10px;
+    gap: 10px;
+  
+}
+
+.residentInfo >div >img{
+    width: 150px;
+    height: 120px;
+}
+
+.residentInfo > div {
+    background-color: azure;
 }
