--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 .ban{
     width:100%;
@@ -16,19 +11,26 @@
     align-items: center;
     justify-content: center;
 }
-
+body{
+    width: 100%;
+    height: 100vh;
+    background-color: #062226;
+}
 .title{
    position: absolute;
    top: 0;
 }
 .App{
-    background-color: lightseagreen;
+    background-color: #062226;
+    color: white;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .App h1{
     text-align: center;
 }
 .dimension_actual{
-    width: 100%;
+    width: calc(80% - 100px);
+    margin: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -52,20 +54,39 @@
     
     height: 40px;
 }
-.residentInfo > div{
-    display: flex;
-    flex-direction: row;
-    font-size: 15px;
-    padding: 10px;
-    gap: 10px;
-  
+.residentInfo {
+    background:#062226;
+    width: 250px;
+    height: 200px;
+    display: inline-block;
+    position: relative;
+   
+    
 }
-
-.residentInfo >div >img{
+.residentInfo_card{
+    font-size: 10px;
     width: 150px;
-    height: 120px;
+    padding: 30px;
+    height: 500px;
+    
+
+}
+span{
+    color:  gray;
 }
 
-.residentInfo > div {
-    background-color: azure;
+.residentInfo_card > img{
+    width: 220px;
+    height: 180px;
+}
+
+.status{
+    position:absolute;
+    top: 25px;
+    left: 45px;
+    color: rgb(245, 244, 242);
+    background-color: #062226;
+    width: 120px;
+    padding: 2px;
+    border-radius: 40px;
 }
